[workspace]
members = ["contracts/router"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["NovaRoute Team"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
strip = true
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug = true
